--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "all": "^0.0.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "^0.15.1"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular/build": "^20.2.1",
